# Qaterial

./: .clang-format  .cmake-format  .editorconfig  .gitignore  .jsbeautifyrc  CMakeLists.txt  CMakePresets.json  LICENSE  Licence  README.md  flake.nix  yolo
cmake/: BuildQQuickHelper.cmake  BuildQSuperMacros.cmake  CPM.cmake  Dependencies.cmake  DownloadProject.cmake  FetchGoogleFontCMake.cmake  FetchMaterialDesignIcons.cmake  FetchQOlm.cmake  FetchQaterial.cmake  FetchQtGeneratorCMake.cmake  FetchQtStaticCMake.cmake  FetchSortFilterProxyModel.cmake  FetchSpdlog.cmake  GenerateQrc.cmake  GenerateQrcAliasQtObject.cmake  PrintConfiguration.cmake  QaterialConfig.cmake  QaterialConfig.cmake.in  QaterialConfigShared.cmake.in  QaterialGenerateIcons.cmake  Version.cmake
docs/: .gitignore  Build.md  Gemfile  Icons.md  QaterialGallery.md  QaterialHotReload.md  QaterialOnline.md  Quickstart.md  Readme.md  _config.yml  index.md  quickstart.md
examples/: CMakelists.txt  Calendar - DatePickerDialog.qml  Calendar - MonthPickerView.qml  Calendar - NavigationBar.qml  Calendar - TextFieldDatePicker.qml  Calendar - YearPickerView.qml  Debyg.qml  Display - Arrow.qml  Display - CircleSlice.qml  Display - ColorIcon.qml  Display - Expandable - Advanced.qml  Display - Expandable - Animation.qml  Display - Expandable - DynamicHeight.qml  Display - Expandable - Simple.qml  Display - IconsListView.qml  Display - LineChart.qml  Display - ToolTip - Positioned.qml  Display - ToolTip - Simple.qml  Display - Typography.qml  FeedBack - Logger.qml  FlatButton.qml  IO - TextFile - Read.qml  IO - TextFile - Write.qml  IO - TextFile.qml  IconsListView.qml  Inputs - AppBarButton.qml  Inputs - CheckButton.qml  Inputs - ColorControlSlider.qml  Inputs - ContinuousSlider.qml  Inputs - FabButton.qml  Inputs - GradientSlider.qml  Inputs - OutlineButton.qml  Inputs - RaisedButton.qml  Inputs - Slider.qml  Inputs - SliderHandle.qml  Inputs - SystemDialog.qml  Inputs - TextField.qml  Inputs - TextFieldClockButton.qml  Inputs - TextFieldDate.qml  Inputs - TextFieldDialog.qml  (+28 more)
examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.qml  HelloWorld.qrc
fonts/: QQuickMaterialHelperFonts.qrc
include/: Logger.hpp  Property.hpp  Qaterial.hpp  Utils.hpp  Version.hpp
nix/: get-cpm-cmake-pkg-source-flag.nix  get-pkg-source-from-cmake.nix  (+1 more)
qml/: Banner.qml  (+178 more)
qml/Qaterial/: AMaterialColorPaletteGrid.qml  AlertDialog.qml  AlertIconDialog.qml  AmCircularHour.qml  AmCircularHourPicker.qml  AppBarButton.qml  ApplicationWindow.qml  Arrow.qml  Banner.qml  BaseMaterialColorPaletteGrid.qml  BusyIndicator.qml  BusyIndicatorDialog.qml  Button.qml  ButtonGroup.qml  CMakeLists.txt  Calendar.qml  CalendarDateButton.qml  CalendarDateDisplay.qml  CalendarDayGrid.qml  CalendarDayPicker.qml  CalendarDayPickerView.qml  CalendarMonthPickerView.qml  CalendarNavigationBar.qml  CalendarView.qml  CalendarWeekDayRow.qml  CalendarYearPickerView.qml  CaptionWithLabel.qml  Card.qml  CardBackground.qml  CardMedia.qml  CardRippleBackground.qml  CardRoundThumbnailTitle.qml  CardSupportingText.qml  CardTitle.qml  CheckButton.qml  CheckDelegate.qml  CheckIndicator.qml  CheckableListView.qml  CheckableListViewDelegate.qml  CircularMinute.qml  (+208 more)
qml/Qaterial/Fonts/: CMakeLists.txt
qml/Qaterial/GraphicalEffects/: .gitignore  BrightnessContrast.qml  CMakeLists.txt  ColorOverlay.qml  Colorize.qml  ConicalGradient.qml  Desaturate.qml  Displace.qml  DropShadow.qml  FastBlur.qml  FastGlow.qml  GammaAdjust.qml  Glow.qml  HueSaturation.qml  LICENSE.BSD  LevelAdjust.qml  LinearGradient.qml  OpacityMask.qml  README.md  RadialGradient.qml  RectangularGlow.qml  ThresholdMask.qml  plugin.cpp  qgfxsourceproxy.cpp  qgfxsourceproxy_p.h  qmldir
qml/Qaterial/GraphicalEffects/shaders_ng/: brightnesscontrast.frag  brightnesscontrast.frag.qsb  colorize.frag  colorize.frag.qsb  coloroverlay.frag  compile.bat  conicalgradient_mask.frag  conicalgradient_mask.frag.qsb  conicalgradient_nomask.frag  conicalgradient_nomask.frag.qsb  desaturate.frag  desaturate.frag.qsb  displace.frag  displace.frag.qsb  fastblur.frag  fastblur.frag.qsb  fastblur_internal.frag  fastblur_internal.frag.qsb  fastblur_internal.vert  fastblur_internal.vert.qsb  fastglow.frag  fastglow.frag.qsb  gammaadjust.frag  gammaadjust.frag.qsb  huesaturation.frag  huesaturation.frag.qsb  leveladjust.frag  leveladjust.frag.qsb  lineargradient.vert  lineargradient.vert.qsb  lineargradient_mask.frag  lineargradient_mask.frag.qsb  lineargradient_nomask.frag  lineargradient_nomask.frag.qsb  opacitymask.frag  opacitymask.frag.qsb  opacitymask_invert.frag  opacitymask_invert.frag.qsb  radialgradient.vert  radialgradient.vert.qsb  (+8 more)
qml/Qaterial/Icons/: CMakeLists.txt
qml/Qaterial/Qt5Compat/: CardMedia.qml  ColorIcon.qml  FabButton.qml  FlatFabButton.qml  ListDelegateContent.qml  MenuItem.qml  RawMaterialButton.qml  SquacleButton.qml  SquacleImageButton.qml  qmldir
res/Fonts/: CMakeLists.txt
res/Icons/: CMakeLists.txt
tests/Loader/: CMakeLists.txt  QaterialTestLoader.cpp
tools/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.qml  HelloWorld.qrc
tools/HotReload/: CMakeLists.txt  IconsMenu.qml  Imports.qml  QaterialHotReload.cpp  QaterialHotReload.qml  QaterialHotReload.qrc  StatusView.qml  TypoMenu.qml
tools/HotReload/app/: CMakeLists.txt
tools/HotReload/app/cmake/: FetchSortFilterProxyModel.cmake
tools/HotReload/app/qml/: Main.qml  QaterialHotReloadApp.qrc
tools/HotReload/app/src/: Main.cpp
tools/HotReload/cmake/: FetchQtWindowsCMake.cmake
tools/HotReload/include/Qaterial/HotReload/: HotReload.hpp
tools/HotReload/lib/: CMakeLists.txt
tools/HotReload/lib/include/Qaterial/HotReload/: HotReload.hpp
tools/HotReload/lib/qml/: HotReload.qml  HotReloadWindow.qml  IconsMenu.qml  ImportPathMenu.qml  Imports.qml  MaterialPaletteMenu.qml  QaterialHotReload.qrc  SplashScreenWindow.qml  StatusView.qml  TypoMenu.qml  qmldir
tools/HotReload/lib/src/: HotReload.cpp
tools/HotReload/qml/: IconsMenu.qml  QaterialHotReload.qml  QaterialHotReload.qrc
tools/HotReload/src/: HotReload.cpp  Main.cpp
(+393 files in other folders)
